--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
         padding: 0;
         font-family: "Courier New", Courier, monospace;
     }
+    html {
+        font-size: 16px;
+    }
     p {
         margin-left: auto;
         margin-right: auto;
         width: 30em;
         margin-top: 1em;
+        line-height: 1.2;
     }
 
     p.title, p.space {
@@ -43,6 +47,14 @@
         font-size: 2em;
         width: 15em;
         text-align: center;
+    }
+    html {
+        font-size: 150%;
+    }
+    @media(min-width:60em) {
+        html {
+            font-size: 100%
+        }
     }
     @media (max-width: 500px) {
         p, p.title, p.space {
