--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         padding: 0;
         font-family: "Courier New", Courier, monospace;
     }
-    html {
+    body {
         font-size: 16px;
     }
     p {
