fixing mobile text size

--- a/index.html
+++ b/index.html
@@ -48,15 +48,11 @@
         width: 15em;
         text-align: center;
     }
-    html {
-        font-size: 150%;
-    }
-    @media(min-width:60em) {
-        html {
-            font-size: 100%
+
+    @media (max-width: 35em) {
+        body {
+            font-size: 32px;
         }
-    }
-    @media (max-width: 500px) {
         p, p.title, p.space {
             padding: 0 5%;
             margin: 0;
