--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
         padding: 0;
         font-family: "Courier New", Courier, monospace;
     }
-    body {
-        font-size: 16px;
-    }
     p {
         margin-left: auto;
         margin-right: auto;
         width: 30em;
         margin-top: 1em;
-        line-height: 1.2;
     }
 
     p.title, p.space {
@@ -49,10 +45,7 @@
         text-align: center;
     }
 
-    @media (max-width: 35em) {
-        body {
-            font-size: 32px;
-        }
+    @media (max-width: 500px) {
         p, p.title, p.space {
             padding: 0 5%;
             margin: 0;
