fixing mobile text size

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         text-align: center;
     }
 
+    @media only screen and (max-device-width: 480px) {
+        body {
+            color: red;
+        }
+	}
+
     @media (max-width: 500px) {
         p, p.title, p.space {
             padding: 0 5%;
