--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     @media only screen and (max-device-width: 480px) {
         body {
-            color: red;
+            font-size: 30px;
         }
 	}
 
