fixing mobile text size

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
     @media only screen and (max-device-width: 480px) {
         body {
+            color: red;
             font-size: 30px;
         }
 	}
