--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             $(window).resize(setPadding);*/
         });
     </script>
+    <link rel="stylesheet" type="text/css" href="desktop.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css" />
-    <link rel="stylesheet" type="text/css" media="only screen and (min-width: 480px), only screen and (min-device-width: 480px)" href="desktop.css" />
 
 </head>
 <body>
