fixing mobile text size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="content">
-        <h1>SILVIU<sup>DAN</sup> CACOVEANU</h1>
+        <h1>SILVIU<sup>DAN</sup><br />CACOVEANU</h1>
         <!--p class="space">&nbsp;</p-->
         <p>I'm blogging about programming and the pleasure of figuring things out <a href="http://blog.cacoveanu.com" target="_blank">here</a>. Ocasionally drawing a comic at <a href="http://chronicweirdo.com" target="_blank">chronicweirdo.com</a>.</p>
     </div>
