fixing mobile text size

--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <title>Silviu D. Cacoveanu</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <link rel="stylesheet" type="text/css" href="desktop.css" />
-    <link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css" />
+    <!--link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css" /-->
 </head>
 <body>
-    <div id="content">
-        <h1>SILVIU<sup>DAN</sup><br />CACOVEANU</h1>
-        <p>I'm blogging about programming and the pleasure of figuring things out <a href="http://blog.cacoveanu.com" target="_blank">here</a>. Ocasionally drawing a comic at <a href="http://chronicweirdo.com" target="_blank">chronicweirdo.com</a>.</p>
-    </div>
+    <h1>SILVIU<sup>DAN</sup><br />CACOVEANU</h1>
+    <p>I'm blogging about programming and the pleasure of figuring things out <a href="http://blog.cacoveanu.com" target="_blank">here</a>. Ocasionally drawing a comic at <a href="http://chronicweirdo.com" target="_blank">chronicweirdo.com</a>.</p>
 </body>
 </html>
