--- a/404.html
+++ b/404.html
@@ -2,20 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>404</title>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: "Courier New", Courier, monospace;
-    }
-    p {
-        text-align: center;
-        margin-top: 1em;
-    }
-</style>
+    <title>404 - Silviu D. Cacoveanu</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-    <p>I don't know what you're looking for.</p>
+    <h1>Huh?</h1>
 </body>
 </html>
