don't force open in new tab

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1><img id="logo" src="logo.svg" /></h1>
-    <p>I'm blogging about programming and the pleasure of figuring things out <a href="http://blog.cacoveanu.com" target="_blank">over here</a>.</p>
-    <p>Find other weird random posts of mine <a href="http://chronicweirdo.com" target="_blank">here</a>.</p>
+    <p>I'm blogging about programming and the pleasure of figuring things out <a href="http://blog.cacoveanu.com">over here</a>.</p>
+    <p>Find other weird random posts of mine <a href="http://chronicweirdo.com">here</a>.</p>
     <p><a href="mailto:zwisgbmdxiyy9qd6v4uw@eml.cc">Email me</a>.</p>
 </body>
 </html>
