--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Silviu D. Cacoveanu</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="cycle_color.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
     <h1><svg id="logo" version="1.1" viewBox="0 0 364.78 219.92" xmlns="http://www.w3.org/2000/svg"><g transform="translate(-3.3366 -3.3366)"><path id="path" d="m115.9 9.5324a104.75 103.76 0 0 0-104.75 103.76 104.75 103.76 0 0 0 30.726 73.325l49.348-48.883a34.916 34.587 0 0 1-10.242-24.442 34.916 34.587 0 0 1 34.916-34.588zm139.67 0a104.75 103.76 0 0 0-104.75 103.76 34.916 34.587 0 0 1-34.916 34.587v69.175a104.75 103.76 0 0 0 104.75-103.76 34.916 34.587 0 0 1 34.916-34.588zm74.023 30.437-49.348 48.883a34.916 34.587 0 0 1 10.242 24.442 34.916 34.587 0 0 1-34.916 34.587v69.175a104.75 103.76 0 0 0 104.75-103.76 104.75 103.76 0 0 0-30.726-73.326z" fill="none" stroke="#000" stroke-width="5"/></g></svg></h1>
-    <p>I'm blogging about programming and the pleasure of figuring things out <a href="http://blog.cacoveanu.com">over here</a>.</p>
+    <p id="para">I'm blogging about programming and the pleasure of figuring things out <a href="http://blog.cacoveanu.com">over here</a>.</p>
     <p>Find other weird random posts of mine <a href="http://chronicweirdo.com">here</a>.</p>
     <p><a href="mailto:zwisgbmdxiyy9qd6v4uw@eml.cc">Email me</a>.</p>
 </body>
