--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Silviu D. Cacoveanu</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.svg?">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="cycle_color.js"></script>
     <script src="script.js"></script>
